Sign up and sign in module added

--- a/styles/css/header.css
+++ b/styles/css/header.css
@@ -29,3 +29,22 @@
 #buttonForSignIn{
     margin-left: 10px;
 }
+
+
+#SignInModal{
+    display: none;
+}
+
+#SignUpModal{
+    display: none;
+}
+
+.notMember{
+    padding: 1%;
+    text-align: center;
+}
+
+
+.notMember button{
+    padding: 1%;
+}
