--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -9,3 +9,16 @@ body{
     overflow:hidden;
     display: block;
  } 
+
+
+.postButtons{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+ .postButtons button{
+     margin-left: 10px;
+ }
