Post content and edit function added

--- a/styles/css/post.css
+++ b/styles/css/post.css
@@ -38,3 +38,12 @@
         
     }
 
+    #postContentInputId{
+        padding: 0px;
+        margin-bottom: 1rem;
+        box-shadow: none;
+        border-color: pink ;
+        display: block; 
+        overflow: hidden; 
+        resize: none;
+    }
